# django-dominate-test

./: .gitignore  README.md  pyproject.toml
tstprj/: manage.py
tstprj/testapp/: dominate.py  pages.py  views.py
tstprj/tstprj/: asgi.py  settings.py  urls.py  wsgi.py
