[tool.black]
line-length = 120

[tool.poetry]
name = "django-dominate-test"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
dominate = "^2.6.0"
django-debug-toolbar = "^3.2.1"
django-user-agents = "^0.4.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.0.0"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
